# SciCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SciCpp.kdev4  main.cpp
GUI/: Simple_window.cpp  Simple_window.h  shader.h
Integrator/: euler_integrator.h  integrator.h  verlet_integrator.h
Laboratory/: experiment.h  freeFallingBall.cpp  freeFallingBall.h
MLP/: CMakeLists.txt  README.md  main.cpp
MLP/mlp/: Net.cpp  Net.h  Neuron.cpp  Neuron.h  Type.h
MLP/util/: AutomaticFindBestParameters.cpp  CSVDataLoader.cpp  CSVDataLoader.h  DatasetManager.cpp  DatasetManager.h  FunctionGenerator.cpp
MathLib/: base.c  fftreal.cpp  fftreal.h  inf_pos.c  mmq.c  quarternion.h  vector_3d.h
Net3D/: net3d.c
Net3D/Datasets/: USAir97.net  football.net  redeusp.names  redeusp.net  teste.names  teste.net  teste2.net
PhysLib/: particle.h  simulation.h
SciLib/: general.h  integral.c  mass.h  mmq.c  physics.h  pilha.c  simulation.h  vector_3d.h
Simulations/: freeFallingBall.cpp  michelsonInterferometer.cpp  millikan.cpp  simulation.h  termionico.cpp
Util/: general.h  pilha.c  pilha.h  queue.c  queue.h
